# CGQtAppBase

./: .gitignore  AppInfo.h.in  CMakeLists.txt  COPYING  README.md
include/: AssimpHelper.h  GLInc.h  GLUtils.h  Light.h  LogUtils.h  Logger.h  MainWindow.h  OpenGLMaterialEntity.h  OpenGLRenderableEntity.h  SceneWidget.h  SharedPointerTypes.h  TrackBall.h
res/: CGQtAppBase.qrc
res/shaders/: phong_simple.frag  phong_simple.vert  phong_simple_comp.frag  phong_simple_comp.vert  phong_texture.frag  phong_texture.vert  phong_texture_comp.frag  phong_texture_comp.vert
src/: AssimpHelper.cpp  GLUtils.cpp  Light.cpp  Logger.cpp  MainWindow.cpp  OpenGLMaterialEntity.cpp  OpenGLRenderableEntity.cpp  SceneWidget.cpp  TrackBall.cpp  main.cpp
ui/: MainWindow.ui
